# cookiecutter-private-pyproject

./: .gitignore  README.md  README.rst  cookiecutter.json  cookiecutterize.py  release-history.rst  requirements.txt
{{ cookiecutter.package_name }}-project/: .coveragerc  .gitignore  LICENSE.txt  Makefile  README.rst  chore.txt  count_code.py  private_pyproject_ops.json  pyproject.toml  release-history.rst  requirements-automation.txt
{{ cookiecutter.package_name }}-project/.github/workflows/: main.yml
{{ cookiecutter.package_name }}-project/docs/: Makefile  make.bat
{{ cookiecutter.package_name }}-project/docs/source/: index.rst
{{ cookiecutter.package_name }}-project/docs/source/00-AWS-Setup/: .gitignore  aws_setup.py  index.rst
{{ cookiecutter.package_name }}-project/{{ cookiecutter.package_name }}/: __init__.py  api.py  paths.py
