[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.semantic_version }}"
description = "An example project to show how to manage a Proprietary Python project that will be published to AWS Code Artifact."
license = "Proprietary"
authors = [
    "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>",
]
maintainers = [
    "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>",
]
readme = "README.rst"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.package_name }}-project"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
include = [
    "*.txt",
    "*.rst",
]
exclude = [
    "*.pyc",
    "*.pyo",
    "{{ cookiecutter.package_name }}/docs/*",
    "{{ cookiecutter.package_name }}/tests/*",
]

[tool.poetry.dependencies]
python = "^3.8"
# Poetry dependencies specification document
# https://python-poetry.org/docs/dependency-specification/
dynamodb_json_seder = ">={{ cookiecutter.semantic_version }},<1.0.0"

[tool.poetry.dev-dependencies]
# Don't put anything here, explicit is better than implicit


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
boto_session_manager = ">=1.7.2,<2.0.0"
twine = "*"
wheel = "*"
build = "*"
rich = ">=12.6.0,<13.0.0"


[tool.poetry.group.doc]
optional = true


[tool.poetry.group.doc.dependencies]
python = "^3.8"
Sphinx = "5.3.0"
sphinx-jinja = "2.0.2"
sphinx-copybutton = "0.5.1"
sphinx-design = "0.5.0"
furo = "2023.03.27"
nbsphinx = "0.8.12"
rstobj = "1.2.1"
pygments = "2.15.1"
ipython = "8.10.0"
docfly = "2.0.3"
furo-sphinx-search = { git = "https://github.com/{{ cookiecutter.github_username }}/furo-sphinx-search", branch = "main" }


[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = ">=6.2.5,<7.0.0"
pytest-cov = ">=2.12.1,<3.0.0"


[[tool.poetry.source]]
name = "{{ cookiecutter.aws_codeartifact_domain }}_python"
url = "https://{{ cookiecutter.aws_codeartifact_domain }}-{{ cookiecutter.aws_account_id }}.d.codeartifact.us-east-1.amazonaws.com/pypi/{{ cookiecutter.aws_codeartifact_repository }}/simple/"
priority = "supplemental"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
